Fixed Projects margin collapse in Safari

--- a/ui/main.reel/main.css
+++ b/ui/main.reel/main.css
@@ -15,6 +15,8 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .ProjectList-item {
